# Llama3_Socratic_Chatbot

./: .gitignore  README.md  app.py  app_copy.py  config.json  db.py  db_optimized.py  initial_message.txt  model_downloader.py  pyproject.toml  setup_env.py  setup_models.py  speed_test.py  system_prompt_de.txt
.streamlit/: config.toml
docs/: 2. Sitzung Prof. Dr. Christian Wirt.txt  Zusammenfassung Bewaffnete Konflikte, Flucht und mentale Gesundheit.txt
llama3-App/local_llm/: app.py  questions.json  questions.py
tests/: speed_test.py  test_docx_extraction.py
