[project]
name = "dialogos-bne"
version = "0.1.0"
description = "University-hosted Socratic RAG chatbot with Streamlit, ChromaDB, SentenceTransformers, and Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "requests>=2.31",
    "chromadb>=0.5",
    "numpy>=1.26",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "langchain>=0.2,<0.4",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "accelerate>=0.30",
    "huggingface_hub>=0.23",
    "ollama>=0.3"
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "pytest>=8.0"
]

[tool.setuptools]
py-modules = ["app", "db_optimized"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"